--- a/waifu.css
+++ b/waifu.css
@@ -2,7 +2,7 @@
 	position: fixed;
 	writing-mode: vertical-rl;
 	bottom: 66px;
-	right: 0px;
+	left: 0px;
 	background-color: #fa0;
 	color: #fff;
 	border-radius: 5px;
@@ -14,7 +14,7 @@
 #waifu {
 	position: fixed;
 	bottom: -1000px;
-	right: 0;
+	left: 0;
 	z-index: 1;
 	line-height: 0;
 	transition: transform .3s ease-in-out;
